--- a/COD/css/page.css
+++ b/COD/css/page.css
@@ -20,34 +20,25 @@ div.search{
 	position: absolute;
 	background: #39d;
 	top: 0;  
+	left: 0%;
 	width: 100%;
 	height: 20%;
 	border: none;
 }
+div.search p{
+	text-align: center;
+	font-size: 24px;
+	padding-top:10px;
+}
 div.search form{
-	width: 100%;
-	height: 100%;
-}
-div.search form button{
-	width: 100px;
-	height: 100%;
-	font-size: 16px;
-	letter-spacing: 5px;
-	border: none;
-}
-div.search form text{
-	width: 400px;
-	height: 100%;
-	font-size: 16px;
-	text-indent: 40px;
-	border: none;
-	float: left;
+	text-align: center;
+	padding-top:20px;
 }
 
 #container {
 	position: absolute;
-	right: 0;
-	bottom: 0;
+	right: 0%;
+	bottom: 0%;
 	width: 50%;
 	height: 50%;
 }
@@ -69,6 +60,7 @@ div.cityWeather{
 	width: 50%;
 	height: 30%;
 }
+
 div.tourismList{
 	position: absolute;
 	background: papayawhip;
